# travel-agent

./: .gitignore  LICENSE  README-VI.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/scripts/: export_graph.py
backend/src/app/: __init__.py  main.py
backend/src/app/agents/: __init__.py  _llm.py  cost.py  itinerary.py  recommendation.py  supervisor.py
backend/src/app/graph/: __init__.py  builder.py  runner.py  stream.py  synthesis.py  trace.py
backend/src/app/llms/: __init__.py  factory.py
backend/src/app/repositories/: sessions.py
backend/src/app/schemas/: __init__.py  api.py  cost.py  itinerary.py  recommendation.py  session.py  state.py  trip.py
backend/src/app/tools/: __init__.py  cost.py  flight.py  geo.py  loop.py  search.py
backend/tests/: test_chat.py  test_cost.py  test_error_handling.py  test_generalization.py  test_health.py  test_itinerary.py  test_memory.py  test_recommendation.py  test_sessions.py  test_state.py  test_trip.py
docs/: api.md  architecture.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: ChatColumn.vue  InputExpandModal.vue  Modal.vue  SessionSidebar.vue  SettingsPanel.vue  SlashMenu.vue  TemplateFields.vue  ThinkingSidebar.vue
frontend/src/lib/: api.ts  i18n.ts  templates.ts  theme.ts  toolCalls.ts
