[project]
name = "backend"
version = "0.1.0"
description = "AI travel consultant backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "fast-flights>=3.0.2",
    "fastapi>=0.137.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "uvicorn[standard]>=0.49.0",
    "wikipedia-api>=0.15.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
